--- a/style.css
+++ b/style.css
@@ -34,9 +34,11 @@ button {
     background-color: blueviolet;
     color: white;
     border-radius: 5px;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     font-weight: 500;
     border: none;
+    padding:0 13px 0 13px;
+    
 }
 
 button:hover{
@@ -84,11 +86,12 @@ button:hover{
 .complete{
     font-size: 17px;
     padding: 3px;
+    width: 30px;
 
 }
 
 .fa-trash {
-    margin-left: 5px;
+    margin-left: 10px;
     color: red;
     font-size: 20px;
     vertical-align: middle;
